adicionando documentação para deleteOpenigHandler
