# handler/response.go
@@ -37,3 +37,7 @@ type CreateOpeningResponse struct {
 	Message string                 `json:"message"`
 	Data    schema.OpeningResponse `json:"data"`
 }
+type DeleteOpeningResponse struct {
+	Message string                 `json:"message"`
+	Data    schema.OpeningResponse `json:"data"`
+}
